--- a/style.css
+++ b/style.css
@@ -77,4 +77,31 @@ body {
     text-align: center;
     color: var(--verde);
     text-transform: uppercase;
+  }.contador {
+    display: flex;
+    justify-content: center;
   }
+  .contador-digito {
+    padding: 0 16px;
+    text-align: center;
+  }
+  .contador-digito-numero {
+    font-size: 80px;
+    margin: 0;
+  }
+  .contador-digito-texto {
+    color: var(--verde);
+    font-size: 20px;
+    margin: 0;
+  }
+  .contador {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .contador-digito {
+    padding: 0 16px;
+    text-align: center;
+    min-width: 100px;
+  }
+            
