--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 :root {
   --cor-de-fundo: #1e1e1e;
-  --verde: #6fff57;
+  --verde: #14dad0;
   --branco: #ffffff;
-  --botao-ativo: #3a375e;
+  --botao-ativo: #3790d8;
   --botao-inativo: rgba(58, 55, 94, 0.5);
   --texto-fundo: rgba(58, 55, 94, 0.3);
 }
